--- a/package.json
+++ b/package.json
@@ -8,8 +8,15 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "autoprefixer": "^10",
+    "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "flowbite": "^1.7.0",
+    "flowbite-datepicker": "^1.2.2",
+    "postcss": "^8",
+    "tailwindcss": "^3",
     "vue": "^2.6.14",
+    "vue-datepicker": "^1.3.0",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
@@ -26,6 +33,7 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-vue": "^8.0.3",
     "prettier": "^2.4.1",
+    "vue-cli-plugin-tailwind": "~3.0.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
